[package]

name = "vecmath"
version = "0.3.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["vecmath", "math", "vector", "matrix", "piston"]
description = "A simple and type agnostic library for vector math designed for reexporting"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/vecmath.git"
homepage = "https://github.com/pistondevelopers/vecmath"

[lib]

name = "vecmath"
path = "src/lib.rs"

[dependencies]
piston-float = "0.3.0"

